--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -12,13 +12,13 @@ Length-based selectivity curves estimated in the assessment are shown for all fl
 
 Model fits to the fishery CPUE and survey indices are presented in @fig-indexfit3 through @fig-indexfit12. The base model predicted a decreasing trend in the triennial survey between 1980 and 2004 (@fig-indexfit10) and a slightly increasing trend for the NWFSC trawl survey between 2003 and 2024 (@fig-indexfit11). The model predicted a relatively flat trend through the IPHC survey index despite the upward trend seen in the last three years as of this update (@fig-indexfit12). The triennial survey index indicated a population decrease in 1992 and lower estimates (compared with pre-1992) persisted through the end of the index time series. This decrease in the abundance index coincided with decrease in number of biological samples collected from this survey. No changes have been implemented to the triennial survey between 1989 and 1992. In 1995, the survey timing slightly shifted from early fall to mid-summer, approximately a month earlier that previous surveys. This shift in timing, however, seems unlikely to impact our understanding of yelloweye rockfish abundance trends during that period, given the sedentary life history of the species. Additionally, the change in the index trend was observed before the slight shift in survey timing. The California MRFSS recreational CPUE index tracked the decline in observations through the 1990s (@fig-indexfit3), and a slight increase in abundance was predicted in the Oregon MRFSS/ORBS recreational index during the 2000s (@fig-indexfit6). The Oregon recreational observer index showed a small and very uncertain increasing trend in the 2000s (@fig-indexfit9). The California CPFV charter series index indicated a relatively flat trajectory prior to 1992 with a drop in stock abundance from 1992 on (@fig-indexfit8). The model predicted a decreasing trend for the Washington Recreational index despite the relatively large variances on many of the observations, which does not match the relative stability of the index from 1982 to the early 2000s (@fig-indexfit7).
 
-The model fits to length frequency distributions by fleet across years are shown in **add length comps by fleet/year**. Pearson residuals for the fits by fleet and year are shown in @fig-pearsonlenfit1 and @fig-pearsonlenfit2. The length data are very sparse in many years and the quality of fit varies among years and fleets, reflecting the differences in the quantity and quality of the data. However, neither length composition data nor the Pearson residuals, which reflect the noise in the data both within and among years, exhibit obvious patterns for any fleet. The data for fishing fleets are particularly poor after 2002 after retention of yelloweye rockfish was prohibited in most fleets and limited in trawl fleets. The model fitted length data aggregated across years reasonably well for all fleets (@fig-agglencomps). Input sample sizes for length composition data were tuned down using the Francis data weighting method. Francis weighting fits to the mean lengths for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X**.
+The model fits to length frequency distributions by fleet across years are shown in **add length comps by fleet/year**. Pearson residuals for the fits by fleet and year are shown in @fig-pearsonlenfit1 and @fig-pearsonlenfit2. The length data are very sparse in many years and the quality of fit varies among years and fleets, reflecting the differences in the quantity and quality of the data. However, neither length composition data nor the Pearson residuals, which reflect the noise in the data both within and among years, exhibit obvious patterns for any fleet. The data for fishing fleets are particularly poor after 2002 after retention of yelloweye rockfish was prohibited in most fleets and limited in trawl fleets. The model fitted length data aggregated across years reasonably well for all fleets (@fig-agglencomps). Input sample sizes for length composition data were tuned down using the Francis data weighting method **add weighting table**. Francis weighting fits to the mean lengths for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X** (**ADW note - we don't normally include these in the report - do we need them?**).
 
-The fits to age data are shown in **Figure X** through **Figure X**, with the “ghost” marginal age compositions shown to aid in visual interpretation of these fits. These “ghost” age compositions do not contribute to the likelihood and do not affect model fit in any way. Input sample sizes for conditional age-at-length composition data were also tuned down using Francis data weighting method. The Francis weighting index fit of the conditional age-at-length data for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X**.
+The fits to age data are shown in **Figure X** through **Figure X**, **ADW - I would suggest we don't include the ghost age comps and we don't normally include ALL of the CAAL - do we have a fleet where we can focus on this?** with the “ghost” marginal age compositions shown to aid in visual interpretation of these fits. These “ghost” age compositions do not contribute to the likelihood and do not affect model fit in any way. Input sample sizes for conditional age-at-length composition data were also tuned down using Francis data weighting method. The Francis weighting index fit of the conditional age-at-length data for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X**. 
 
 ### Population Trajectory
 
-The estimated time series of spawning output for the entire stock and by area are shown in **Figure X** and **Figure X**, respectively. Relative spawning output (relative to SB0) for the entire stock and by area are shown in **Figure X** and **Figure X**, respectively. Total biomass, summary biomass and recruitment are shown in **Figure X**, **Figure X** and **Figure X**, respectively. They are also presented in **Figure X**. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of yelloweye rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The relative spawning output reached a minimum of 16% of unexploited levels in 2000 (**Figure X**). Yelloweye rockfish spawning output is estimated to have been gradually increasing since that time, in response to large reductions in harvest.
+The estimated time series of spawning output for the entire stock and by area are shown in @fig-spout_area. Relative spawning output (relative to SB0) for the entire stock and by area are shown in @fig-status_area. Total biomass, summary biomass and recruitment are shown in @fig-totalbio, @fig-summbio and @fig-tsrecuits, respectively. Trends in total and summary biomass, absolute and relative spawning output track one another very closely. The spawning output of yelloweye rockfish started to decline in the 1940s during World War II, but are estimated to have been lightly exploited until the mid-1970s when catches increased and a rapid decline in biomass and spawning output began. The combined relative spawning output reached a minimum of 16% of unexploited levels in 2000 (@fig-spout_combined). Yelloweye rockfish spawning output is estimated to have been gradually increasing since that time, in response to large reductions in harvest.
 
 The aggregate spawning output estimates do not convey the spatial heterogeneity included via the area-specific dynamics. Relative spawning output has differed between the two areas modelled in the assessment, with the California resource estimated to have a lower unfished
 equilibrium spawning output and estimated to be more depleted in 2025 than the Oregon and Washington resource (**Figure X**). As an exploratory exercise, we also generated an estimate of the time series of spawning output by area relative to the fixed ratio of recruitment distribution (**Figure X**). Unexpectedly, the simplifying assumption of a constant ratio of recruits is not reflected in the spawning biomass, showing source and sink dynamics of two areas linked by common recruitment. To ensure that recruit distribution parameter does not cause unreasonable output, when a portion of the stock in one area is heavily depleted but sustained by high recruitment in another (less exploited) area, we conducted sensitivity analysis and compared the two-area base model to a single area model, and a single area model yielded the similar results as a two-area base model (**Table X**).
