--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -5,25 +5,25 @@
 A summary of available data by type and fleet used in the yelloweye rockfish assessment is available in @fig-data. Data that have changed from the previous assessment are summarized below. No new data sources were considered in this update assessment.
 
 Removals: 
-Post-2016 landings and discards were updated for all three states for the commercial and recreational fleets. 
-A new Oregon historical recreational catch reconstruction was incorporated. 
-A new Washington historical recreational catch reconstruction was provided by WDFW and included changes to data from 1990-2016.
+- Post-2016 landings and discards were updated for all three states for the commercial and recreational fleets. 
+- A new Oregon historical recreational catch reconstruction was incorporated, which covered 1979 - 2000. 
+- A new Washington historical recreational catch reconstruction was provided by WDFW and included changes to data from 1990-2016.
 
 Composition Data: 
-Length and age composition data were updated from 2017 - 2024 for all states for the commercial and recreational fleets. 
-Length and age composition data were also updated for two of the fishery-independent surveys, including the NWFSC Bottom Trawl survey and the IPHC Longline survey.
-Some length and age composition data from the 2017 assessment had minor errors in how sample numbers were calculated, ageing error assignment, and doubled age samples and thus needed to be fixed. See fleet specific details below.   
+- Length and age composition data were updated from 2017 - 2024 for all states for the commercial and recreational fleets. 
+- Length and age composition data were also updated for two of the fishery-independent surveys, including the NWFSC Bottom Trawl survey and the IPHC Longline survey.
+- Some length and age composition data from the 2017 assessment had minor errors in how sample numbers were calculated, ageing error assignment, and doubled age samples and thus needed to be fixed. See @sec-fd_comps below.   
 
 Indices of Abundance: 
-Indices that were updated with more recent data and/or updated methodology include: 
-Oregon Onboard Observer (2001 - 2024) 
-Oregon ORBS Dockside (release only) (2004-2024)
-NWFSC Bottom Trawl Survey 
-IPHC Longline Survey
+-Indices that were updated with more recent data and/or updated methodology include: 
+    -Oregon Onboard Observer (2001 - 2024) 
+    -Oregon ORBS Dockside (release only) (2004-2024)
+    -NWFSC Bottom Trawl Survey 
+    -IPHC Longline Survey
 
 Biological Data: 
-Length-weight relationship parameters were updated to include all the recent (2017 - 2024) fishery-independent data.
-Ageing error matrices were unchanged but some Oregon recreation ages were assigned the wrong ageing error and were corrected based on ODFW recommendations. 
+- Length-weight relationship parameters were updated to include all the recent (2017 - 2024) fishery-independent data.
+- Ageing error matrices were unchanged but some Oregon recreation ages were assigned the wrong ageing error and were corrected based on ODFW recommendations. 
 
 ## Fishery-Dependent Data 
 
@@ -35,13 +35,13 @@ Updated fishery-dependent data, including removals, length and age compositions,
 
 A summary of total removals are provided in **@tbl-all_removals** and @fig-catch.
 
-Recent commercial landings (2017-2024) were obtained from **PacFIN (www.pacfin.com)** for California, Oregon and Washington, and as with the previous assessment, for the period from 2016 through 2023, updated WCGOP discard estimates were added to PacFIN landings by calculating the proportion of observed area-specific fleet WCGOP discards expanded from the fleet-specific GEMM total recorded discards to obtain the total catch of yelloweye rockfish within commercial fleets. 
+Recent commercial landings (2017-2024) were obtained from [PacFIN](www.pacfin.psmfc.org) for California, Oregon and Washington, and as with the previous assessment, for the period from 2016 through 2023, updated West Coast Groundfish Observer Program (WCGOP) discard estimates were added to PacFIN landings by calculating the proportion of observed area-specific fleet WCGOP discards expanded from the fleet-specific GEMM total recorded discards to obtain the total catch of yelloweye rockfish within commercial fleets. 
 
 Bycatch for the At-Sea Pacific Hake fleet (ASHOP) was updated from 2017 through 2024 and included in the trawl fleets for California and Oregon/Washington. 
 
-Recreational removals from RecFIN were updated for California, Oregon and Washington from 2017 - 2024. RecFIN removals include an estimate of discard mortality and represent total estimated removals. Updated historical recreational removals for Oregon from 1979 through 2000 were provided by ODFW [@Whitman_2024]. Updated historical recreational removals for Washington (1967-1989) and Washington Department of Fish and Wildlife Ocean Sampling Program (OSP) estimates (1990-2001) were provided by WDFW [@Fabio/RecFin May pull]. The historical recreational removals for 1971, 1974, and 1979 were not available and were treated as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For OSP catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. WDFW also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average mortality rate from the following 5 years (2005-2009) by the total discards to calculate total mortality for those years.  
+Recreational removals from [RecFIN](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. RecFIN removals include an estimate of discard mortality and represent total estimated removals. Updated historical recreational removals for Oregon from 1979 through 2000 were provided by Oregon Department of Fish and Wildlife (ODFW,[@Whitman_2024]). Updated historical recreational removals for Washington (1967-1989) and Washington Department of Fish and Wildlife (WDFW) Ocean Sampling Program (OSP) estimates (1990-2001) were provided by WDFW [@Fabio/RecFin May pull]. The historical recreational removals for 1971, 1974, and 1979 were not available and were treated as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For OSP catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. WDFW also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average mortality rate from the following 5 years (2005-2009) by the total discards to calculate total mortality for those years.  
 
-### Fishery-Dependent Length and Age Compositions 
+### Fishery-Dependent Length and Age Compositions {#sec-fd_comps}
 
 Updated length composition data for commercial catches (trawl and non-trawl) were available from PacFIN (extracted April 4, 2025) and from WCGOP for all three states. These include the years 2017 - 2024 for PacFIN data and 2017 - 2023 for WCGOP data. Updated recreational length composition data were available from RecFIN (extracted April 4, 2025) for all three states, and include years 2017 - 2024. Additionally, updated length compositions from the California On-Board CPFV Observer Sampling Program and from the Ocean Recreational Fishery Survey (ORFS, previously the Oregon onboard recreational observer program), both of which measure fish discarded at sea, were also available up through 2024 on RecFIN. 
 
@@ -53,23 +53,27 @@ We also found that conditional-age-at-length (CAAL) data from the 2017 assessmen
 
 How these problems were treated for each fleet specifically is detailed below, including other minor data changes. Otherwise, length and age composition data are unchanged from the previous assessment; please refer to the most recent benchmark assessment [@gertseva_stock_2017] for additional information. 
 
-#### Fleet Specific Changes in the Compositional Data 
+#### Fleet Specific Changes in the Compositional Data
 
 Fleet 2. California Non-Trawl
-For ages, all the CAAL and marginal-age-at-length (MAAL) data were recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in 2017.
+- For ages, all the CAAL and marginal-age-at-length (MAAL) data were recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in 2017.
+
 Fleet 3. California Recreational
-CAAL data for 1979-1984 were doubled, so the number of samples and ages in each length bin was divided by two.
-CAAL data for 2009-2016 were doubled, but the raw data we received from RecFin were correct, without doubled ages, so this time series was replaced with newly pulled data. 
-We then re-built the MAAL data from the updated CAAL for both time periods because there were errors in previous data entry and sample number calculations.
+- CAAL data for 1979-1984 were doubled, so the number of samples and ages in each length bin was divided by two.
+- CAAL data for 2009-2016 were doubled, but the raw data we received from RecFin were correct, without doubled ages, so this time series was replaced with newly pulled data. 
+- We then re-built the MAAL data from the updated CAAL for both time periods because there were errors in previous data entry and sample number calculations.
+
 Fleet 4. Oregon/Washington Trawl & Fleet 5. Oregon/Washington Non-Trawl
-Both the OR/WA commercial fleets had all CAAL and MAAL data recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in 2017.
+- Both the OR/WA commercial fleets had all CAAL and MAAL data recalculated using the most recent age data pulled from PacFIN and WCGOP, to account for age doubling in 2017.
+
 Fleet 6. Oregon Recreational
-CAAL data was doubled so ages and sample numbers from 1979 - 2017 were divided by two. 
-We included 2015 unsexed ages. 
-We also reassigned the aging error for this fleet for the correct years. The ODFW data representative confirmed that all fish from 1979-2002 were aged by WDFW (ageing error 1), and fish from 2009-2016 were aged by the NWFSC (ageing error 2). No new ages since 2016 were provided.
+- CAAL data was doubled so ages and sample numbers from 1979 - 2017 were divided by two. 
+- We included 2015 unsexed ages. 
+- We also reassigned the aging error for this fleet for the correct years. The ODFW data representative confirmed that all fish from 1979-2002 were aged by WDFW (ageing error 1), and fish from 2009-2016 were aged by the NWFSC (ageing error 2). No new ages since 2016 were provided.
 MAAL data were then recalculated from the updated CAAL so that the ageing error labels and number of samples matched.
+
 Fleet 7. Washington Recreational
-All age data from 1998 to 2024 were replaced with the most recent data provided in RecFIN, following the recommendation of the WDFW representative, due to resolved ages based on double readings in the age data. CAAL and MAAL were calculated using this data.
+- All age data from 1998 to 2024 were replaced with the most recent data provided in RecFIN, following the recommendation of the WDFW representative, due to resolved ages based on double readings in the age data. CAAL and MAAL were calculated using this data.
 
 ### Indices of Abundance
 
