--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -112,7 +112,7 @@ The biomass estimates produced for this assessment using sdmTMB are comparable t
 
 The IPHC has conducted an annual longline survey for Pacific halibut off the coast of Oregon and Washington (IPHC area “2A”) since 1997 (no surveys were performed in 1998 or 2000). Beginning in 1999, this has been a fixed station design, with roughly 1,800 hooks deployed at each of 84 locations. Before 1999, station locations were not fixed, and, therefore, those years are not used in the index. Rockfish bycatch, mainly yelloweye, was recorded during this survey, although values for 1999 and 2001 are estimates based on subsampling the first 20 hooks of each 100-hook skate. The gear used to conduct this survey, while designed specifically to efficiently sample Pacific halibut, is similar to that used in some earlier line fisheries that targeted adult yelloweye rockfish. Some variability in exact sampling location is unavoidable, and leeway is given in the IPHC methods to center the set on the target coordinates but to allow wind and currents to dictate the actual direction in which the gear is deployed. This can result in different habitats accessed at each fixed location among years. The number of skates used can also differ from year to year; skates hauled (i.e., 100 hooks/skate) are thus used as the unit of effort for all years. This has been the standard effort used in past yelloweye rockfish stock assessments. 
 
-New to this assessment is the consideration of eight additional survey stations conducted by WDFW (2007-2016). These stations are arranged around IPHC station 1082 (one of the more notable stations to encounter yelloweye rockfish) and were conducted during the spring, summer, and fall months. Only the summer months are considered here  to match the time of year sampled by the IPHC survey. Survey sets at the WDFW stations used 3 skates with 100 hooks each. Like the IPHC survey, effort was standardized to 100 hooks/skate. These stations were integrated into the IPHC stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington, fitting the area of the stock, instead of using state-specific indices. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered yelloweye (averaging less than one encounter a year). This left 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
+New to this assessment is the consideration of eight additional survey stations (1527 to 1534) conducted in a collaborative effort between IPHC and WDFW from 2007-2009 then from 2013-2019 and 2021-2023. These stations are arranged around IPHC station 1082 (one of the more notable stations to encounter yelloweye rockfish). Only the summer months are considered here to match the time of year sampled by the IPHC survey. Survey sets at the WDFW stations used 3 skates with 100 hooks each for most years, except for 2021 - 2023, where a total of 4 skates were used. Like the IPHC survey, effort was standardized to 100 hooks/skate. These stations were integrated into the IPHC stations when calculating the index of abundance. The full survey used in this assessment combined all stations in Oregon and Washington into a single index, fitting the area of the stock, instead of using state-specific indices. Data were first filtered to remove all depths with few or no encounters, and then we excluded stations that rarely encountered yelloweye (averaging less than one encounter a year). This left a total of 11 stations for analysis. Both filtering levels increased the percentage of encounters from an initial 11% to 80%. 
 
 A log-normal generalized linear model with a log link in the “sdmTMB” R package was used to standardize the CPUE. Model selection using the Akaike Information Criteria for small samples (AICc) was conducted to select which variables were included in the model. The final model included year, station, and depth as explanatory variables. Diagnostic tools to ensure the model fit was satisfactory included checking whether the hessian matrix is positive definite, the presence of extreme eigenvalues, and if the non-linear minimizer suggests convergence. These diagnostics were conducted with the “sanity( )” function in the sdmTMB package. The updated index is shown in @fig-IPHC_index and compared to the index used in the 2017 index in @fig-IPHC_comparison. 
 
