--- a/report/002_load_tables.qmd
+++ b/report/002_load_tables.qmd
@@ -18,6 +18,7 @@ inputs <- r4ss::SS_read(here::here("model", "2025_base_model"))
 
 tables <-r4ss::table_all(replist, dir = here::here("report"))
 
+
 if (file.exists(here::here("report/tables"))) {
   all_files <- list.files(here::here("report/tables"), full.names = TRUE)
   all_rda_files <- all_files[grep(".rda", all_files)]
@@ -101,21 +102,29 @@ if (file.exists(here::here("report/tables"))) {
 # reported in MT and some in numbers of fish
 GMT016 <- read.csv(here::here("report", "tables", "GMT016-final specifications-.csv"))
 es_10_years <- recent_management_table$Year
-recent_management_table[, "OFL (mt)"] <- GMT016 |>
-  dplyr::filter(SPECIFICATION_TYPE == "OFL", YEAR %in% es_10_years) |>
-  dplyr::arrange(YEAR) |>
-  dplyr::select(VAL)
 
-recent_management_table[, "ABC (mt)"] <- GMT016 |>
-  dplyr::filter(SPECIFICATION_TYPE == "ABC", YEAR %in% es_10_years) |>
-  dplyr::arrange(YEAR) |>
-  dplyr::select(VAL)
-recent_management_table[, "ACL (mt)"] <- GMT016 |>
-  dplyr::filter(SPECIFICATION_TYPE == "ACL", YEAR %in% es_10_years) |>
-  dplyr::arrange(YEAR) |>
-  dplyr::select(VAL)
+# Had to switch the way this is done from what Yellowtail had because our GMT016
+# didn't have the year 2022
+GMT_filt <- GMT016 |>
+  select(YEAR, SPECIFICATION_TYPE, VAL) |>
+  pivot_wider(names_from = SPECIFICATION_TYPE,
+              values_from = VAL) |>
+  select(YEAR, OFL, ABC, ACL) |>
+  dplyr::filter(YEAR %in% es_10_years) |>
+  arrange(YEAR) |>
+  rename(Year = YEAR,
+         `OFL (mt)` = OFL,
+         `ABC (mt)` = ABC,
+         `ACL (mt)` = ACL)
+recent_management_table <- recent_management_table |>
+  full_join(try, by = c("Year")) |>
+  select(Year, `OFL (mt).y`, `ABC (mt).y`, `ACL (mt).y`, `Catch (mt)`) |>
+  rename(`OFL (mt)` = `OFL (mt).y`,
+         `ABC (mt)` = `ABC (mt).y`,
+         `ACL (mt)` = `ACL (mt).y`)
 recent_management_table <- round(recent_management_table)
-  
+
+
 projections_table[1:2, "Adopted OFL (mt)"] <- GMT016 |>
   dplyr::filter(SPECIFICATION_TYPE == "OFL", YEAR %in% projections_table$Year) |>
   dplyr::arrange(YEAR) |>
@@ -125,7 +134,6 @@ projections_table[1:2, "Adopted ACL (mt)"] <- GMT016 |>
   dplyr::arrange(YEAR) |>
   dplyr::select(VAL)
   
-# yelloweye_management <- read.csv(here::here("report", "tables", "yelloweye_management.csv"))
 ```
 
 ```{r}
